# Bookshelf-Scanner

./: README.md  __init__.py  pyproject.toml
.streamlit/: config.toml
ParameterOptimizer/: ParameterOptimizer.py  README.md  __init__.py
TextExtractor/: README.md  TextExtractor.py  __init__.py
bookshelf_scanner/: __init__.py
bookshelf_scanner/config/: params.yml
bookshelf_scanner/core/: orch.py
bookshelf_scanner/core/book_segmenter/: base.py  yolov8.py
bookshelf_scanner/core/fuzzy_matcher/: README.md  __init__.py  __main__.py  match_results.json  matcher.py  notes.md
bookshelf_scanner/core/module_logger/: README.md  __init__.py  logger.py
bookshelf_scanner/core/parameter_optimizer/: README.md  __main__.py  notes.md  optimizer.py
bookshelf_scanner/core/text_extractor/: README.md  __main__.py  extractor.py
bookshelf_scanner/core/utils/: __init__.py  utils.py
bookshelf_scanner/data/utils/: inspect_db.py
bookshelf_scanner/dev/akre/Hough Lines/: james_bookshelf_scanner.py
bookshelf_scanner/frontend/: ReadMe.md  app.py
config/: params.yml
images/Shelves/: iphone_format_half_shadow.heic
obrien/: book_text_match.py
