[tool.poetry]
name         = "Bookshelf Scanner"
version      = "0.0.0"
description  = "Required packages for the final project for CS5330."
authors      = ["James Parkington <pongs.acreage.0o@icloud.com>"]
readme       = "README.md"
packages     = [
    { include = "BookSegmenter" },
    { include = "TextExtractor" },
    { include = "ParameterOptimizer" }
]

[tool.poetry.dependencies]
python        = "^3.12"

duckdb        = "*"
easyocr       = "*"
matplotlib    = "^3.9.2"
onnxruntime   = "^1.20.0"
opencv-python = "*"
ruamel-yaml   = "*"
torch         = "*"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"