[tool.poetry]
name         = "bookshelf-scanner"
version      = "0.0.0"
description  = "Required packages for the final project for CS5330."
authors      = ["James Parkington <pongs.acreage.0o@icloud.com>"]
readme       = "README.md"
packages     = [{ include = "bookshelf_scanner" }]

[tool.poetry.dependencies]
python        = "^3.12"

duckdb        = "*"
easyocr       = "*"
matplotlib    = "^3.9.2"
onnxruntime   = "^1.20.0"
opencv-python = "*"
ruamel-yaml   = "*"
rapidfuzz = ">=2.13.0,<3.0.0"
torch         = "*"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"